<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false" >

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:visibility="gone" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@null"
                android:src="@drawable/title" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/select"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/photos"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_config"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:textColor="#075ac2"
                    android:textStyle="bold"
                    android:onClick="onClick"
                    android:text="@string/config_title" />

                <Button
                    android:id="@+id/btn_start"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:textColor="#075ac2"
                    android:textStyle="bold"
                    android:background="@drawable/btn_start"
                    android:onClick="onClick"
                    android:text="@string/btn_play" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"

                android:drawableLeft="@drawable/setting"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/config_title"
                android:textColor="#fff"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/config_sound"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/config_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:switchTextAppearance="@style/SwitchText"
                android:textOff="ON"
                android:textOn="OFF"
                android:thumb="@drawable/button"
                android:track="@drawable/switch_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/mode"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/config_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:switchTextAppearance="@style/SwitchText"
                android:textOff="EASY"
                android:textOn="HARD"
                android:thumb="@drawable/button"
                android:track="@drawable/switch_bg" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/time"
                android:textColor="#E5FD8C"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_high_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/best_time"
                android:textColor="#e4d33e"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/result_tap"
                android:textColor="#e4d33e"
                android:textSize="16sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/txt_faq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="20dp"
            android:shadowColor="#000"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/faq"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>